# python_ocr_demo

./: .gitignore  README.md  USAGE.md  example.py  main.py  ocr_tool.py  pyproject.toml  test_ocr.py
