[project]
name = "python-ocr"
version = "0.1.0"
description = "A Python OCR tool class based on PaddleOCR"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "cairosvg>=2.8.2",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
]

[project.scripts]
ocr-test = "test_ocr:test_ocr_tool"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocr_tool"]
exclude = ["test_ocr", "main", "example"]
